--- a/tables/normalised_subtracted_image_size.tex
+++ b/tables/normalised_subtracted_image_size.tex
@@ -1,6 +1,6 @@
 %\documentclass[8pt]{article} 
 %\begin{document}
-\begin{table}
+\begin{table}[H]
 \vspace{-100pt}
 \begin{tabular}{| c | c | l | l | l | l | c | }
 \hline
@@ -86,6 +86,6 @@ Test	&Scene 1	&Scene 2	&Scene 3	&Scene 4	&Scene 5	&STDEV\\\hline
 10	&71257	&66062	&79217	&63713	&78011	&6930.0\\
 Average	&62439.9	&70207.9	&74170.6	&65812.2	&71354.6	&4656.4\\\hline
 \end{tabular}
-\label{tab:normalised_images}
+\label{tab:normalised-images}
 \end{table}
 %\end{document}
